# hoverpanel

./: .gitmodules  Cargo.toml  README.md  submod.toml
offdictd/: Cargo.toml
offdictd/examples/: bench.rs
offdictd/src/: def.rs  def_bin.rs  lib.rs  tests.rs  topk.rs
src/: console.rs  lib.rs  main.rs  prelude.rs
