[package]
name = "hoverpanel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
offdictd.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland.workspace = true

[workspace.dependencies]
metacomplete = { path = "./metacomplete", features = ["serde"] }
offdictd = { path = "./offdictd" }
wayland = { package = "layer-shell-wgpu-egui", path = "./wayland-popup" }

[workspace]
members = ["offdictd", "wayland-popup"]
