[package]
name = "hoverpanel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.32.3"
offdictd.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland.workspace = true

egui_tracing = { path = "../egui_tracing/egui-tracing" }
winit = "0.30.12"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "signal",
] }

[workspace.dependencies]
metacomplete = { path = "./metacomplete", features = ["serde"] }
offdictd = { path = "./offdictd" }
wayland = { package = "layer-shell-wgpu-egui", path = "./wayland-popup" }

[workspace]
members = ["offdictd", "wayland-popup"]
